# kpersonal-desktop

./: .gitignore  CMakeLists.txt
include/: CustomDelegate.hpp  ListItemWidget.hpp  MainWindow.hpp  MenuBar.hpp  StackedModuleWidget.hpp
include/modules/: CalendarModule.hpp  FlashcardsModule.hpp  HabitModule.hpp  KanbanModule.hpp  ProjectModule.hpp  TaskModule.hpp  TimeModule.hpp  WikiModule.hpp
qml/: LeftPanel.qml  MenuBarLoader.qml  ModulesModel.qml  main.qml
qml/Modules/: CalendarModule.qml  FlashcardsModule.qml  HabitModule.qml  KanbanModule.qml  ListModule.qml  ProjectModule.qml  TaskModule.qml  TimeModule.qml  TimelineModule.qml  WikiModule.qml
src/: CustomDelegate.cpp  CustomDelegate.hpp  ListItemWidget.cpp  ListItemWidget.hpp  MainWindow.cpp  MainWindow.hpp  MenuBar.cpp  StackedModuleWidget.cpp  main.cpp
src/modules/: CalendarModule.cpp  FlashcardsModule.cpp  HabitModule.cpp  KanbanModule.cpp  ProjectModule.cpp  TaskModule.cpp  TimeModule.cpp  WikiModule.cpp
